fix: increase nav spacing for large viewports

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,6 +35,10 @@ body {
 }
 
 nav {
+  @media screen and (min-width: 500px) {
+    margin: 2em 0;
+  }
+
   ul {
     list-style-type: none;
     padding-left: 0;
